# Furniverse

./: .gitignore  3D_GENERATION_GUIDE.md  ARCHITECTURE.md  AR_DEMO_GUIDE.md  INDEXING_GUIDE.md  INTEGRATION_SUMMARY.md  PIPELINE_SUMMARY.md  QDRANT_CLOUD_SETUP.md  README.md  package-lock.json  pyproject.toml
Backend/: README.md  STRUCTURE.md  debug_candidates.py  demo_stats.py  embedding_tradeoff.py  main.py  requirements.txt  room_analysis.py  test_comparison.py  test_recommendations.py  test_smart_search.py  test_smart_thresholds.py  test_tradeoff_explanations.py  tradeoff_config.py  tripo_generator.py  user_activity.py
Backend/analytics/: __init__.py  search_analytics.py
Backend/assets/: 3d_model_cache.json
Backend/config/: __init__.py
Backend/data/: dataset.csv
Backend/services/: __init__.py  models.py  product_comparison.py  repository.py  room_analysis.py
Backend/tests/: __init__.py  test_blue_sofa.py  test_fusion.py  test_recommendations.py  test_tradeoff_trigger.py
Backend/utils/: __init__.py  tradeoff_helpers.py
Data/processed/: interactions.json  products.csv  products.json  purchases.json
Data/raw/: products.json
Frontend/: .gitignore  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  App.module.css  index.css
Pipeline/: requirements.txt  run_indexing.py  test_qdrant_connection.py
Pipeline/cv/: detector.py
Pipeline/embeddings/: color_extractor.py  engine.py  models.py  storage.py
Pipeline/graph/: build_graph.py
Pipeline/indexing/: index_profiles.py  index_qdrant.py
Pipeline/preprocessing/: download_images.py  (+1 more)
(+73 files in other folders)
