[project]
name = "furniverse"
version = "0.1.0"
description = "Multimodal AI-powered furniture recommendation system with Qdrant vector search"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # Limited to avoid numpy 2.x dependency conflicts
dependencies = [
    # Core ML/AI
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=3.0.0",
    # Vector Database
    "qdrant-client>=1.11.0,<1.16", # Compatible with numpy 1.x
    # Data Processing
    "numpy>=1.24.0,<2.0.0", # Limited by node2vec requirement
    "pillow>=10.3.0,<12.0.0",
    "scikit-learn>=1.4.0",
    # Graph Embeddings
    "networkx>=3.0",
    "node2vec>=0.4.6",
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]
